--- a/Pages/AdminManagementPage.razor
+++ b/Pages/AdminManagementPage.razor
@@ -141,8 +141,8 @@
         </div>
 
         <div class="form-group">
-            <label>Duration (in hours):</label>
-            <input type="number" min="1" max="24" @bind="newMaintenanceRequest.Duration" />
+            <label>Duration (in minutes):</label>
+            <input type="number" min="1" max="1440" @bind="newMaintenanceRequest.Duration" />
         </div>
 
         <div class="form-group">
