--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
+<h1>Counter button</h1>
 
 <p role="status">Current counts: @currentCount</p>
 
